# Lab-more-project

./: .flake8  .gitignore  .gitmodules  AGENTS.md  README.md  chat.py  endpoint.py  gradio_server.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: doctests.yml  integration-tests.yml
tests/: test_chat.py  test_cli.py  test_integration.py  test_tools.py
tools/: calculate.py  cat.py  compact.py  doctests.py  grep.py  ls.py  pip_install.py  repo_utils.py  rm.py  write_file.py  write_files.py
